update readme, beauty fixes, add simple demo, cookie test generate fix, symbolic execution tools doc